Fix list item spacing bug on about page

--- a/css/development/legend.css
+++ b/css/development/legend.css
@@ -173,9 +173,6 @@ p.meta {
 
 /* ABOUT PAGE */
 
-body#about ul li{
-  margin-bottom:20px;
-}
 body#about #content strong, body#about #content a {
   font-weight:bold;
 }
